--- a/login.html
+++ b/login.html
@@ -3,32 +3,40 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v6.5.2/css/all.css"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/assets/css/styles.css" />
+    <link rel="stylesheet" href="/assets/css/responsive.css" />
+    <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon" />
     <title>PROVERBIOS ARG</title>
-    <link rel="stylesheet" href="/PROVERBIOS/Proverbios/estilos.css" />
+    <link rel="stylesheet" href="/estilos.css" />
   </head>
   <body>
     <!-- para que la imagen ocupe toda la pantalla usar background-size: 100%-->
     <header>
       <h1>
-        <a href="index.html"
-          ><img
-            src="img/LOGO/logo2.png"
-            alt="PROVERBIOS"
-            width="180"
-            height="180"
+        <a href="index.html">
+          <img
+            id="img-logo"
+            src="img/LOGO/Logo Belleza Manicura Femenino Rosa.png"
+            alt="Proverbios"
           />
         </a>
       </h1>
 
       <div>
-        <nav>
-          <ul class="menu">
+        <nav role="navigation">
+          <ul>
             <li><a href="index.html">INICIO</a></li>
             <li><a href="servicios.html">SERVICIOS</a></li>
-            <li><a href="quienessomos.html">NOSOTROS</a></li>
+            <li><a href="nosotros.html">NOSOTROS</a></li>
             <li><a href="contacto.html">CONTACTO</a></li>
             <li><a href="galeria.html">NUESTROS TRABAJOS</a></li>
-            <li><a href="registro.html"></a></li>
+            <li><a href="ubicacion.html">UBICACION</a></li>
+            <li><a href="registro.html">REGISTRARME</a></li>
           </ul>
         </nav>
       </div>
